# constrained-some

./: CHANGELOG.md  LICENSE  README.md  constrained-some.cabal
.github/workflows/: haskell-ci.yml
src/Data/Some/: Constraint.hs
