cabal-version:      3.0
name:               constrained-some
version:            0.1.0.0
synopsis:
    Existential GADT-Wrapper that can be constrained on the type-level

-- description:
homepage:           https://github.com/bruderj15/constrained-some
license:            MIT
license-file:       LICENSE
author:             Julian Bruder
maintainer:         julian.bruder@outlook.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   src
    default-language: GHC2021

test-suite constrained-some-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        constrained-some
